<resources>
    <string name="app_name">Blue2th Chat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="search_fragment_label">Search Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="muhammed_aydogan">Muhammed Aydoğan</string>
    <string name="edib_hamza_arslan">Edib Hamza Arslan</string>
    <string name="add_icon">add icon</string>
    <string name="select_an_avatar">Select an avatar</string>
    <string name="your_avatar">Your Avatar</string>
    <string name="finish">Finish</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="available_devices">Available Devices</string>
    <string name="type_a_message">Type a message</string>
    <string name="enable_discoverability">Make me discoverable</string>
    <string name="search">Search</string>
    <string name="connect_other_devices_to_start_chat">Connect other devices to start chat</string>
</resources>