<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.ma.blue2thchat.fragments.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.ma.blue2thchat.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:launchSingleTop="true" />

        <action
            android:id="@+id/action_SecondFragment_to_SearchFragment"
            app:destination="@id/SearchFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.ma.blue2thchat.fragments.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_SearchFragment_to_chatFragment"
            app:destination="@id/ChatFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/ChatFragment"
        android:name="com.ma.blue2thchat.fragments.ChatFragment"
        android:label="ChatFragment"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_chatFragment_to_SearchFragment"
            app:destination="@id/SearchFragment"
            app:launchSingleTop="true" />
    </fragment>
</navigation>